--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>James Romanov</title>
-<!--
-Stacked Template
-https://templatemo.com/tm-505-stacked
--->
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -22,9 +18,6 @@ https://templatemo.com/tm-505-stacked
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
     <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
         <nav class="nav">
           <div class="burger">
             <div class="burger__patty"></div>
@@ -54,20 +47,20 @@ https://templatemo.com/tm-505-stacked
                   <div class="col-md-8 col-md-offset-2">
                     <div class="home-content">
                       <div class="home-heading">
-                        <h1><em>James Romanov</em> HTML CSS</h1>
+                        <h1><em>James Romanov</em></h1>
                       </div>
                       <div class="row">
                         <div class="col-md-12">
                           <div class="home-box-content">
                             <div class="left-text">
-                              <h4>New <em>Stacked</em> Template</h4>
-                              <p>Stacked HTML CSS Template is provided by TemplateMo website. You can edit and use this template for any purpose. Please mention your friends about our website. Thank you.</p>
+                              <h4>Aspiring software developer</h4>
+                              <p>Thank you for visiting my personal portfolio!</p>
                               <div class="primary-button">
                                 <a href="#2">Discover More</a>
                               </div>
                             </div>
                             <div class="right-image">
-                              <img src="./img/progamming pic 1.jpg" alt="">
+                              <img src="./img/programming pic 2.png" alt="">
                             </div>
                           </div>
                         </div>
