Progress with project section.

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                           <div class="owl-carousel owl-theme projects-container">
                             <div>
                               <div class="project-item">
-                                <a href="bulma" data-lightbox="image-1"><img src="./img/bulma use.png" alt=""></a>
+                                <a href="https://github.com/JRomanov/Personal-website-v2"><img src="./img/bulma use.png" alt=""></a>
                                 <div class="text-content">
                                   <h4>Personal website v2</h4>
                                   <p>Building the second version of my site incorporatating Bulma.</p>
@@ -146,10 +146,10 @@
                             </div>
                             <div>
                               <div class="project-item">
-                                <a href="img/project-item-03.jpg" data-lightbox="image-1"><img src="img/project-item-03.jpg" alt=""></a>
+                                <a href="img/project-item-03.jpg" data-lightbox="image-1"><img src="img/bootstrap logo.png" alt=""></a>
                                 <div class="text-content">
-                                  <h4>New Thought</h4>
-                                  <p>Lorem ipsum dolor, adipis scing elit etiam ante vehicula, aliquam mauris in, luctus neque.</p>
+                                  <h4>Personal website v3</h4>
+                                  <p>Bulding a new and sexier version of my site.</p>
                                   <div class="primary-button">
                                     <a href="#">Discover More</a>
                                   </div>
