Added links to project githubs and picture.

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                                   <h4>React task tracker</h4>
                                   <p>Creating a task tracker while learning the React library.</p>
                                   <div class="primary-button">
-                                    <a href="#">Discover More</a>
+                                    <a href="https://github.com/JRomanov/React-Task-Tracker">Discover More</a>
                                   </div>
                                 </div>
                               </div>
@@ -151,14 +151,14 @@
                                   <h4>Personal website v3</h4>
                                   <p>Bulding a new and sexier version of my site.</p>
                                   <div class="primary-button">
-                                    <a href="#">Discover More</a>
+                                    <a href="https://github.com/notorious/sign-me-up">Discover More</a>
                                   </div>
                                 </div>
                               </div>
                             </div>
                             <div>
                               <div class="project-item">
-                                <a href="img/project-item-04.jpg" data-lightbox="image-1"><img src="img/project-item-04.jpg" alt=""></a>
+                                <a href="img/project-item-04.jpg" data-lightbox="image-1"><img src="img/code stock.jpg" alt=""></a>
                                 <div class="text-content">
                                   <h4>Next Moment</h4>
                                   <p>Lorem ipsum dolor sit amet, adipis scing elit etiam sit amet ante vehicula, aliquam mauris in, luctus neque.</p>
