More progess in projects section.

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                                   <h4>Personal website v3</h4>
                                   <p>Bulding a new and sexier version of my site.</p>
                                   <div class="primary-button">
-                                    <a href="https://github.com/notorious/sign-me-up">Discover More</a>
+                                    <a href="https://github.com/JRomanov/Personal-website-v3">Discover More</a>
                                   </div>
                                 </div>
                               </div>
@@ -160,20 +160,20 @@
                               <div class="project-item">
                                 <a href="img/project-item-04.jpg" data-lightbox="image-1"><img src="img/code stock.jpg" alt=""></a>
                                 <div class="text-content">
-                                  <h4>Next Moment</h4>
-                                  <p>Lorem ipsum dolor sit amet, adipis scing elit etiam sit amet ante vehicula, aliquam mauris in, luctus neque.</p>
+                                  <h4>Software Engineering</h4>
+                                  <p>Seven person group to develop a fully functional website in CS-532.</p>
                                   <div class="primary-button">
-                                    <a href="#">Discover More</a>
+                                    <a href="https://github.com/notorious/sign-me-up/tree/main">Discover More</a>
                                   </div>
                                 </div>
                               </div>
                             </div>
                             <div>
                               <div class="project-item">
-                                <a href="img/project-item-05.jpg" data-lightbox="image-1"><img src="img/project-item-05.jpg" alt=""></a>
+                                <a href="img/project-item-05.jpg" data-lightbox="image-1"><img src="img/cprog.jpg" alt=""></a>
                                 <div class="text-content">
-                                  <h4>Artwork</h4>
-                                  <p>Lorem ipsum dolor, adipis scing elit etiam ante vehicula, aliquam mauris in, luctus neque.</p>
+                                  <h4>Operating Systems</h4>
+                                  <p>OS assignments/projects done in CS-570.</p>
                                   <div class="primary-button">
                                     <a href="#">Discover More</a>
                                   </div>
