Finished and polished projects section.

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                           <div class="owl-carousel owl-theme projects-container">
                             <div>
                               <div class="project-item">
-                                <a href="https://github.com/JRomanov/Personal-website-v2"><img src="./img/bulma use.png" alt=""></a>
+                                <img src="./img/bulma use.png" alt="">
                                 <div class="text-content">
                                   <h4>Personal website v2</h4>
                                   <p>Building the second version of my site incorporatating Bulma.</p>
@@ -134,7 +134,7 @@
                             </div>
                             <div>
                               <div class="project-item">
-                                <a href="img/project-item-02.jpg" data-lightbox="image-1"><img src="img/react.png" alt=""></a>
+                                <img src="img/react.png" alt="">
                                 <div class="text-content">
                                   <h4>React task tracker</h4>
                                   <p>Creating a task tracker while learning the React library.</p>
@@ -146,7 +146,7 @@
                             </div>
                             <div>
                               <div class="project-item">
-                                <a href="img/project-item-03.jpg" data-lightbox="image-1"><img src="img/bootstrap logo.png" alt=""></a>
+                                <img src="img/bootstrap logo.png" alt="">
                                 <div class="text-content">
                                   <h4>Personal website v3</h4>
                                   <p>Bulding a new and sexier version of my site.</p>
@@ -158,7 +158,7 @@
                             </div>
                             <div>
                               <div class="project-item">
-                                <a href="img/project-item-04.jpg" data-lightbox="image-1"><img src="img/code stock.jpg" alt=""></a>
+                                <img src="img/code stock.jpg" alt="">
                                 <div class="text-content">
                                   <h4>Software Engineering</h4>
                                   <p>Seven person group to develop a fully functional website in CS-532.</p>
@@ -170,36 +170,24 @@
                             </div>
                             <div>
                               <div class="project-item">
-                                <a href="img/project-item-05.jpg" data-lightbox="image-1"><img src="img/cprog.jpg" alt=""></a>
+                                <img src="img/cprog.jpg" alt="">
                                 <div class="text-content">
                                   <h4>Operating Systems</h4>
                                   <p>OS assignments/projects done in CS-570.</p>
                                   <div class="primary-button">
-                                    <a href="#">Discover More</a>
+                                    <a href="https://github.com/JRomanov/CS-570-Operating-Systems">Discover More</a>
                                   </div>
                                 </div>
                               </div>
                             </div>
                             <div>
                               <div class="project-item">
-                                <a href="img/project-item-06.jpg" data-lightbox="image-1"><img src="img/project-item-06.jpg" alt=""></a>
+                                <img src="img/ds.jpg" alt="">
                                 <div class="text-content">
-                                  <h4>Sixth Box</h4>
-                                  <p>Lorem ipsum dolor, adipis scing elit etiam ante vehicula, aliquam mauris in, luctus neque.</p>
+                                  <h4>data structures</h4>
+                                  <p>Assignments/projects done in CS-310 involving different types of data structures.</p>
                                   <div class="primary-button">
-                                    <a href="#">Discover More</a>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                            <div>
-                              <div class="project-item">
-                                <a href="img/project-item-07.jpg" data-lightbox="image-1"><img src="img/project-item-07.jpg" alt=""></a>
-                                <div class="text-content">
-                                  <h4>Item #7</h4>
-                                  <p>Lorem ipsum dolor, adipis scing elit etiam ante vehicula, aliquam mauris in, luctus neque.</p>
-                                  <div class="primary-button">
-                                    <a href="#">Discover More</a>
+                                    <a href="https://github.com/JRomanov/CS-310-Data-Structures">Discover More</a>
                                   </div>
                                 </div>
                               </div>
