Added logos and changed contact me message.

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                             <h4>Passion, adaptability, and a strong will to learn</h4>
                             <p>
                               I recently obtained my B.S. degree in Computer Science from San Diego State University. I had my first PC when I was nine years old, and since then, have always been intrigued on how they operate. This sparked a passion in me and made me go into the Computer Science field because I knew I always wanted to be working with technology and computers. My goal in life is to continue working with computers as a software developer or web developer with a company that solves complex modern-day problems.
-                              </p>
+                            </p>
                             <div class="primary-button">
                               <a href="#3">Discover More</a>
                             </div>
@@ -233,9 +233,11 @@
                         </div>
                         <div class="col-md-4">
                           <div class="more-info">
-                            <p>Nunc purus ligula, ullamcorper id velit id, vestibulum auc sapien. Sed quis mauris eget sem imperdiet rhoncus.<br><br>
-                            <em>880 Etiam mauris erat,
-								<br>Vestibulum eu augue nec, 10940</em></p>
+                            <p>Thank you for viewing my portfolio. Connect with me on LinkedIn or take a look at my GitHub!</p>
+                            <div class="logos">
+                              <img src="./img/likedin logo 2.png" alt="">
+                              <img src="./img/github pic 2.png" alt="">
+                            </div>
                           </div>
                         </div>
                       </div>
