Added clickable link to social media platforms.

--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
                           <div class="more-info">
                             <p>Thank you for viewing my portfolio. Connect with me on LinkedIn or take a look at my GitHub!</p>
                             <div class="logos">
-                              <img src="./img/likedin logo 2.png" alt="">
-                              <img src="./img/github pic 2.png" alt="">
+                              <a href="https://www.linkedin.com/in/james-romanov/"><img src="./img/likedin logo 2.png" alt=""></a>
+                              <a href="https://github.com/JRomanov"><img src="./img/github pic 2.png" alt=""></a>
                             </div>
                           </div>
                         </div>
