Mobile formatting progression.

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                         <div class="col-md-12">
                           <div class="home-box-content">
                             <div class="left-text">
-                              <h4>Aspiring software developer</h4>
-                              <p>Thank you for visiting my personal portfolio!</p>
+                              <h4>Software developer</h4>
+                              <p>Web developer and Javascript expert.</p>
                               <div class="primary-button">
                                 <a href="#2">Discover More</a>
                               </div>
@@ -107,7 +107,7 @@
             </div>
           </article>
         </section>
-        <section class="panel b-red" id="3">
+        <section class="panel b-red" id="3"">
           <article class="panel__wrapper">
             <div class="panel__content">
               <div class="container">
@@ -122,7 +122,7 @@
                           <div class="owl-carousel owl-theme projects-container">
                             <div>
                               <div class="project-item">
-                                <img src="./img/bulma use.png" alt="">
+                                <a href="https://github.com/JRomanov/Personal-website-v2" alt="Visit James' github repo" target="_blank"><img src="./img/bulma use.png" alt=""></a>
                                 <div class="text-content">
                                   <h4>Personal website v2</h4>
                                   <p>Building the second version of my site incorporatating Bulma.</p>
@@ -226,7 +226,7 @@
                                 <textarea name="message" rows="6" class="form-control" id="message" placeholder="Message" required=""></textarea>
                               </fieldset>
                               <fieldset>
-                                <button type="submit" id="form-submit" class="btn">Send Message</button>
+                                <button type="submit" id="form-submit" class="btn">Send Message</button> <!--add formsubmit-->
                               </fieldset>
                             </form>
                           </div>
@@ -235,8 +235,8 @@
                           <div class="more-info">
                             <p>Thank you for viewing my portfolio. Connect with me on LinkedIn or take a look at my GitHub!</p>
                             <div class="logos">
-                              <a href="https://www.linkedin.com/in/james-romanov/"><img src="./img/likedin logo 2.png" alt=""></a>
-                              <a href="https://github.com/JRomanov"><img src="./img/github pic 2.png" alt=""></a>
+                              <a href="https://www.linkedin.com/in/james-romanov/" target="_blank"><img src="./img/likedin logo 2.png" alt=""></a>
+                              <a href="https://github.com/JRomanov" target="_blank"><img src="./img/github pic 2.png" alt=""></a>
                             </div>
                           </div>
                         </div>
