--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </div>
           </article>
         </section>
-        <section class="panel b-red" id="3"">
+        <section class="panel b-red" id="3">
           <article class="panel__wrapper">
             <div class="panel__content">
               <div class="container">
@@ -122,7 +122,7 @@
                           <div class="owl-carousel owl-theme projects-container">
                             <div>
                               <div class="project-item">
-                                <a href="https://github.com/JRomanov/Personal-website-v2" alt="Visit James' github repo" target="_blank"><img src="./img/bulma use.png" alt=""></a>
+                                <a href="https://github.com/JRomanov/Personal-website-v2" alt="Visit James' github repo for Personal-website-v2" target="_blank"><img src="./img/bulma use.png" alt=""></a>
                                 <div class="text-content">
                                   <h4>Personal website v2</h4>
                                   <p>Building the second version of my site incorporatating Bulma.</p>
@@ -134,7 +134,7 @@
                             </div>
                             <div>
                               <div class="project-item">
-                                <img src="img/react.png" alt="">
+                                <a href="https://github.com/JRomanov/React-Task-Tracker"><img src="img/react.png" alt=""></a>
                                 <div class="text-content">
                                   <h4>React task tracker</h4>
                                   <p>Creating a task tracker while learning the React library.</p>
@@ -146,7 +146,7 @@
                             </div>
                             <div>
                               <div class="project-item">
-                                <img src="img/bootstrap logo.png" alt="">
+                                <a href="https://github.com/JRomanov/Personal-website-v3"><img src="img/bootstrap logo.png" alt=""></a>
                                 <div class="text-content">
                                   <h4>Personal website v3</h4>
                                   <p>Bulding a new and sexier version of my site.</p>
@@ -158,7 +158,7 @@
                             </div>
                             <div>
                               <div class="project-item">
-                                <img src="img/code stock.jpg" alt="">
+                                <a href="https://github.com/notorious/sign-me-up/tree/main"><img src="img/code stock.jpg" alt=""></a>
                                 <div class="text-content">
                                   <h4>Software Engineering</h4>
                                   <p>Seven person group to develop a fully functional website in CS-532.</p>
@@ -170,7 +170,7 @@
                             </div>
                             <div>
                               <div class="project-item">
-                                <img src="img/cprog.jpg" alt="">
+                                <a href="https://github.com/JRomanov/CS-570-Operating-Systems"><img src="img/cprog.jpg" alt=""></a>
                                 <div class="text-content">
                                   <h4>Operating Systems</h4>
                                   <p>OS assignments/projects done in CS-570.</p>
@@ -182,7 +182,7 @@
                             </div>
                             <div>
                               <div class="project-item">
-                                <img src="img/ds.jpg" alt="">
+                                <a href="https://github.com/JRomanov/CS-310-Data-Structures"><img src="img/ds.jpg" alt=""></a>
                                 <div class="text-content">
                                   <h4>data structures</h4>
                                   <p>Assignments/projects done in CS-310 involving different types of data structures.</p>
