--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                             </div>
                             <div>
                               <div class="project-item">
-                                <a href="https://github.com/JRomanov/React-Task-Tracker"><img src="img/react.png" alt=""></a>
+                                <a href="https://github.com/JRomanov/React-Task-Tracker" target="_blank"><img src="img/react.png" alt=""></a>
                                 <div class="text-content">
                                   <h4>React task tracker</h4>
                                   <p>Creating a task tracker while learning the React library.</p>
@@ -146,19 +146,19 @@
                             </div>
                             <div>
                               <div class="project-item">
-                                <a href="https://github.com/JRomanov/Personal-website-v3"><img src="img/bootstrap logo.png" alt=""></a>
+                                <a href="https://github.com/JRomanov/Personal-website-v3" target="_blank"><img src="img/bootstrap logo.png" alt=""></a>
                                 <div class="text-content">
                                   <h4>Personal website v3</h4>
                                   <p>Bulding a new and sexier version of my site.</p>
                                   <div class="primary-button">
-                                    <a href="https://github.com/JRomanov/Personal-website-v3">Discover More</a>
+                                    <a href="https://github.com/JRomanov/Personal-website-v3" target="_blank">Discover More</a>
                                   </div>
                                 </div>
                               </div>
                             </div>
                             <div>
                               <div class="project-item">
-                                <a href="https://github.com/notorious/sign-me-up/tree/main"><img src="img/code stock.jpg" alt=""></a>
+                                <a href="https://github.com/notorious/sign-me-up/tree/main" target="_blank"><img src="img/code stock.jpg" alt=""></a>
                                 <div class="text-content">
                                   <h4>Software Engineering</h4>
                                   <p>Seven person group to develop a fully functional website in CS-532.</p>
@@ -170,7 +170,7 @@
                             </div>
                             <div>
                               <div class="project-item">
-                                <a href="https://github.com/JRomanov/CS-570-Operating-Systems"><img src="img/cprog.jpg" alt=""></a>
+                                <a href="https://github.com/JRomanov/CS-570-Operating-Systems" target="_blank"><img src="img/cprog.jpg" alt=""></a>
                                 <div class="text-content">
                                   <h4>Operating Systems</h4>
                                   <p>OS assignments/projects done in CS-570.</p>
@@ -182,7 +182,7 @@
                             </div>
                             <div>
                               <div class="project-item">
-                                <a href="https://github.com/JRomanov/CS-310-Data-Structures"><img src="img/ds.jpg" alt=""></a>
+                                <a href="https://github.com/JRomanov/CS-310-Data-Structures" target="_blank"><img src="img/ds.jpg" alt=""></a>
                                 <div class="text-content">
                                   <h4>data structures</h4>
                                   <p>Assignments/projects done in CS-310 involving different types of data structures.</p>
