--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="row">
                   <div class="col-md-8 col-md-offset-2">
                     <div class="about-content">
-                      <div class="heading">
+                      <div class="heading" id="aboutMe">
                         <h4>About Me</h4>
                       </div>
                       <div class="row">
