--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                               <h4>Software developer</h4>
                               <p>Web developer and Javascript expert.</p>
                               <div class="primary-button">
-                                <a href="#2">Discover More</a>
+                                <button id="firstDiscoverButton">Discover More</button>
                               </div>
                             </div>
                             <div class="right-image">
@@ -95,7 +95,7 @@
                               I recently obtained my B.S. degree in Computer Science from San Diego State University. I had my first PC when I was nine years old, and since then, have always been intrigued on how they operate. This sparked a passion in me and made me go into the Computer Science field because I knew I always wanted to be working with technology and computers. My goal in life is to continue working with computers as a software developer or web developer with a company that solves complex modern-day problems.
                             </p>
                             <div class="primary-button">
-                              <a href="#3">Discover More</a>
+                              <a href="#3" style="z-index: 10000;">Discover More</a>
                             </div>
                           </div>
                         </div>
@@ -226,7 +226,7 @@
                                 <textarea name="message" rows="6" class="form-control" id="message" placeholder="Message" required=""></textarea>
                               </fieldset>
                               <fieldset>
-                                <button type="submit" id="form-submit" class="btn">Send Message</button> <!--add formsubmit-->
+                                <button type="submit" id="form-submit" class="btn">Send Message</button>
                               </fieldset>
                             </form>
                           </div>
@@ -261,6 +261,15 @@
 
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
+
+        <script>
+          let firstButton = document.getElementById("firstDiscoverButton")
+          let aboutMeHeading = document.getElementById("aboutMe")
+
+          firstButton.onclick = function() {
+            aboutMeHeading.scrollIntoView( {behavior: "smooth", block: "end", inline: "nearest"})
+          }
+        </script>
 
     </body>
 </html>
