Padding for mobile.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="css/templatemo-style.css">
-
+        <!--<style>
+          
+        </style> -->
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
     <body>
@@ -28,7 +30,7 @@
               <a href="#1" class="nav__link c-blue"><img src="img/home-icon.png" alt=""></a>
             </li>
             <li class="nav__item">
-              <a href="#2" class="nav__link c-yellow scrolly"><img src="img/about-icon.png" alt=""></a>
+              <a href="#section2" class="nav__link c-yellow scrolly"><img src="img/about-icon.png" alt=""></a>
             </li>
             <li class="nav__item">
               <a href="#3" class="nav__link c-red"><img src="img/projects-icon.png" alt=""></a>
@@ -72,7 +74,7 @@
             </div>
           </article>
         </section>
-        <section class="panel b-yellow" id="2">
+        <section class="panel b-yellow" id="section2">
           <article class="panel__wrapper">
             <div class="panel__content">
               <div class="container">
