--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="css/templatemo-style.css">
         <!--<style>
-          
+          section.panel-b-yellow
         </style> -->
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
@@ -247,7 +247,7 @@
                   </div>
                   <div class="col-md-12">
                     <div class="footer">
-                      <p>Copyright &copy; 2023 James Romanov </p>
+                      <p>Copyright &copy; 2024 James Romanov </p>
                     </div>
                   </div>
                 </div>
